install gsl in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ matrix:
       env: MATRIX_LIBRARY=nmatrix
     - rvm: ree
       env: MATRIX_LIBRARY=nmatrix
+before_install:
+  - sudo apt-get update -qq -y
+  - sudo apt-get install -qq -y gsl-bin
