--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,14 @@ before_install:
   - sudo apt-get update -qq -y
   - sudo apt-get install -qq -y libblas3gf libblas-dev gfortran
 
-  - curl -o atlas3.10.1.tar.bz2 "http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2?r=&ts=1367178352&use_mirror=iweb"
-  - curl -O http://www.netlib.org/lapack/lapack-3.4.2.tgz
-
   # http://www.vesperix.com/arm/atlas-arm/faq/index.html
   # @note Travis does not have those `cpu` directories.
 
   # http://math-atlas.sourceforge.net/atlas_install/node6.html
   # http://math-atlas.sourceforge.net/atlas_install/node8.html
+  - curl -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2
   - bunzip2 -c atlas3.10.1.tar.bz2 | tar xfm -
+  - curl -O http://www.netlib.org/lapack/lapack-3.4.2.tgz
   - cd ATLAS
   - ./configure -b 32 --with-netlib-lapack-tarfile=$HOME/lapack-3.4.1.tgz
   - make build
