--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
       env: MATRIX_LIBRARY=nmatrix
     - rvm: ree
       env: MATRIX_LIBRARY=nmatrix
+# http://about.travis-ci.org/docs/user/build-configuration/
+# http://about.travis-ci.org/docs/user/languages/ruby/
 before_install:
   # http://www.vesperix.com/arm/atlas-arm/faq/index.html
   # Travis does not have those `cpu` directories.
@@ -23,25 +25,25 @@ before_install:
   # https://github.com/SciRuby/nmatrix/wiki/Installation
   # If installing libatlas-base-dev libatlas3gf-base via apt-get,
   # /usr/lib/libcblas.so and /usr/lib/libatlas.so will already exist.
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then sudo apt-get update -qq -y; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then sudo apt-get install -qq -y libblas3gf libblas-dev gfortran; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get update -qq -y; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq -y libblas3gf libblas-dev gfortran; fi
   # http://math-atlas.sourceforge.net/atlas_install/node6.html
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then curl -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then bunzip2 -c atlas3.10.1.tar.bz2 | tar xfm -; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then curl -O http://www.netlib.org/lapack/lapack-3.4.2.tgz; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then cd ATLAS; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then mkdir subdir; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then cd subdir; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bunzip2 -c atlas3.10.1.tar.bz2 | tar xfm -; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -O http://www.netlib.org/lapack/lapack-3.4.2.tgz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd ATLAS; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then mkdir subdir; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd subdir; fi
   # https://github.com/vtjnash/atlas-3.10.0/blob/master/INSTALL.txt
   # http://math-atlas.sourceforge.net/atlas_install/node8.html
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then ../configure -b 32 -D c -DWALL --with-netlib-lapack-tarfile=$HOME/lapack-3.4.1.tgz; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then make build; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then sudo make install; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then ../configure -b 32 -D c -DWALL --with-netlib-lapack-tarfile=$HOME/lapack-3.4.1.tgz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then make build; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo make install; fi
   # http://stackoverflow.com/a/12029573/244258
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then curl -O http://mirror.veriportal.com/gnu/gsl/gsl-1.14.tar.gz; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then tar xzf gsl-1.14.tar.gz; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then cd gsl-1.14; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then ./configure; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then make; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then sudo make install; fi
-  - if [[ $MATRIX_LIBRARY == 'nmatrix' ]]; then rvm rubygems 1.8.25; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then curl -O http://mirror.veriportal.com/gnu/gsl/gsl-1.14.tar.gz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then tar xzf gsl-1.14.tar.gz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then cd gsl-1.14; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then ./configure; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then make; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then sudo make install; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then rvm rubygems 1.8.25; fi
