--- a/.travis.yml
+++ b/.travis.yml
@@ -20,31 +20,32 @@ matrix:
 # http://about.travis-ci.org/docs/user/ci-environment/
 # http://about.travis-ci.org/docs/user/languages/ruby/
 before_install:
+  # http://sciruby.com/docs/installation/atlas.html
+  # If installing libatlas-base-dev libatlas3gf-base via apt-get,
+  # /usr/lib/libcblas.so and /usr/lib/libatlas.so will already exist.
+  # @see https://gist.github.com/jpmckinney/2eedb9a22eb47bfe9966
+
   # @todo Turn off CPU throttling.
   # http://www.vesperix.com/arm/atlas-arm/faq/index.html
   # Travis does not have those `cpu` directories.
 
-  # https://github.com/SciRuby/nmatrix/wiki/Installation
-  # If installing libatlas-base-dev libatlas3gf-base via apt-get,
-  # /usr/lib/libcblas.so and /usr/lib/libatlas.so will already exist.
-
   # http://ubuntuforums.org/showthread.php?t=1325671
   # http://ubuntuforums.org/showthread.php?t=1877944
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get update -qq -y; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq -y libatlas-base-dev libatlas3gf-base libblas3gf libblas-dev gfortran libc6-dev-i386; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq -y libblas3gf libblas-dev gfortran-multilib gfortran libc6-dev-i386; fi
   # http://math-atlas.sourceforge.net/atlas_install/node6.html
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2; fi
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bunzip2 -c atlas3.10.1.tar.bz2 | tar xfm -; fi
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -o $HOME/lapack-3.4.2.tgz http://www.netlib.org/lapack/lapack-3.4.2.tgz; fi
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd ATLAS; fi
-  ## ATLAS will complain if you do not build in a subdirectory.
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then mkdir subdir; fi
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd subdir; fi
-  ## https://github.com/vtjnash/atlas-3.10.0/blob/master/INSTALL.txt
-  ## http://math-atlas.sourceforge.net/atlas_install/node8.html
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then ../configure -b 32 -D c -DWALL --with-netlib-lapack-tarfile=$HOME/lapack-3.4.2.tgz; fi
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then make build; fi
-  #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo make install; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -o $HOME/lapack-3.4.2.tgz http://www.netlib.org/lapack/lapack-3.4.2.tgz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bunzip2 -c atlas3.10.1.tar.bz2 | tar xfm -; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd ATLAS; fi
+  # ATLAS will complain if you do not build in a subdirectory.
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then mkdir subdir; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd subdir; fi
+  # https://github.com/vtjnash/atlas-3.10.0/blob/master/INSTALL.txt
+  # http://math-atlas.sourceforge.net/atlas_install/node8.html
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then ../configure -b 32 -D c -DWALL --with-netlib-lapack-tarfile=$HOME/lapack-3.4.2.tgz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then make build; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo make install; fi
 
   - if [ $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get install gsl-bin libgsl0-dev; fi
 # Travis sometimes runs without Bundler.
