--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,11 @@ before_install:
 
   # http://ubuntuforums.org/showthread.php?t=1325671
   # http://ubuntuforums.org/showthread.php?t=1877944
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get update -qq -y; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq -y libblas3gf libblas-dev gfortran-multilib gfortran libc6-dev-i386; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get update -qq; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq libblas3gf libblas-dev gfortran-multilib gfortran libc6-dev-i386 > /dev/null; fi
   # http://math-atlas.sourceforge.net/atlas_install/node6.html
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -o $HOME/lapack-3.4.2.tgz http://www.netlib.org/lapack/lapack-3.4.2.tgz; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -s -o $HOME/lapack-3.4.2.tgz http://www.netlib.org/lapack/lapack-3.4.2.tgz; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -s -L -O http://downloads.sourceforge.net/project/math-atlas/Stable/3.10.1/atlas3.10.1.tar.bz2; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bunzip2 -c atlas3.10.1.tar.bz2 | tar xfm -; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd ATLAS; fi
   # ATLAS will complain if you do not build in a subdirectory.
@@ -45,7 +45,7 @@ before_install:
   # https://github.com/vtjnash/atlas-3.10.0/blob/master/INSTALL.txt
   # http://math-atlas.sourceforge.net/atlas_install/node8.html
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then ../configure -b 32 -D c -DWALL --with-netlib-lapack-tarfile=$HOME/lapack-3.4.2.tgz; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then make build; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then make build > /dev/null; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo make install; fi
 
   - if [ $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get install gsl-bin libgsl0-dev; fi
