--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,17 @@ rvm:
 env:
   - MATRIX_LIBRARY=gsl
   - MATRIX_LIBRARY=narray
+  - MATRIX_LIBRARY=nmatrix
   - MATRIX_LIBRARY=matrix
+matrix:
+  exclude:
+    - rvm: 1.8.7
+      env: MATRIX_LIBRARY=nmatrix
+    - rvm: ree
+      env: MATRIX_LIBRARY=nmatrix
 before_install:
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get update -qq; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq libatlas-dev libatlas3gf-base; fi
   - if [ $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get install gsl-bin libgsl0-dev; fi
 # Travis sometimes runs without Bundler.
 install: bundle
