try installing lapack

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ matrix:
       env: MATRIX_LIBRARY=nmatrix
 before_install:
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get update -qq; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq libatlas-dev libatlas3gf-base; fi
+  # Installing ATLAS will install BLAS.
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq liblapack3gf liblapack-dev libatlas-dev libatlas3gf-base; fi
   - if [ $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get install gsl-bin libgsl0-dev; fi
   - bundle config build.nmatrix --with-lapacklib
 # Travis sometimes runs without Bundler.
