--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
       env: MATRIX_LIBRARY=nmatrix
 before_install:
   - bundle config build.nmatrix --with-lapacklib
+  - echo $BUNDLE_GEMFILE
+  - echo $BUNDLE_BIN_PATH
   - if [ $MATRIX_LIBRARY = 'nmatrix' -o $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get update -qq; fi
   - if [ $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get install gsl-bin libgsl0-dev; fi
   # Installing ATLAS will install BLAS.
@@ -26,7 +28,7 @@ before_install:
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd nmatrix; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -O https://gist.github.com/jpmckinney/5490092/raw/6aade19baf36c33f232fae3f7e4d97f3f8e3dac6/nmatrix_for_travis.patch; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then git apply nmatrix_for_travis.patch; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bundle; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bundle install --gemfile=Gemfile; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then bundle exec rake install; fi
 # Travis sometimes runs without Bundler.
 install: bundle
