--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - if [ $MATRIX_LIBRARY = 'gsl' ]; then sudo apt-get install gsl-bin libgsl0-dev; fi
   # Installing ATLAS will install BLAS.
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then ORIGINAL_BUNDLE_GEMFILE=$BUNDLE_GEMFILE; fi
-  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq libatlas-dev libatlas-base-dev libatlas3-base libatlas3gf-base; fi
+  - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then sudo apt-get install -qq libatlas-dev libatlas-base-dev libatlas3gf-base; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then git clone git://github.com/SciRuby/nmatrix.git; fi
   - if [ $MATRIX_LIBRARY = 'nmatrix' ]; then cd nmatrix; fi
   #- if [ $MATRIX_LIBRARY = 'nmatrix' ]; then curl -O https://gist.github.com/jpmckinney/5490092/raw/6aade19baf36c33f232fae3f7e4d97f3f8e3dac6/nmatrix_for_travis.patch; fi
