Update supported ruby versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,21 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.0.0
-  - 2.1.0
-  - 2.2.0
+  - 2.4
+  - 2.5
+  - 2.6
+  - 2.7
+  - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+      env: MATRIX_LIBRARY=gsl
+    - rvm: ruby-head
+      env: MATRIX_LIBRARY=narray
+    - rvm: ruby-head
+      env: MATRIX_LIBRARY=nmatrix
+    - rvm: ruby-head
+      env: MATRIX_LIBRARY=matrix
 env:
   - MATRIX_LIBRARY=gsl
   - MATRIX_LIBRARY=narray
