--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ rvm:
   - 3.2
   - ruby-head
 matrix:
-  allow_failures:
+  exclude:
+    # No gem releases since 2017 and failing on new versions.
+    # https://rubygems.org/gems/gsl
+    # https://rubygems.org/gems/nmatrix
     - rvm: 3.0
       env: MATRIX_LIBRARY=gsl
     - rvm: 3.1
@@ -20,14 +23,15 @@ matrix:
       env: MATRIX_LIBRARY=gsl
     - rvm: ruby-head
       env: MATRIX_LIBRARY=gsl
-    - rvm: ruby-head
-      env: MATRIX_LIBRARY=matrix
-    - rvm: ruby-head
-      env: MATRIX_LIBRARY=narray
     - rvm: 3.2
       env: MATRIX_LIBRARY=nmatrix
     - rvm: ruby-head
       env: MATRIX_LIBRARY=nmatrix
+  allow_failures:
+    - rvm: ruby-head
+      env: MATRIX_LIBRARY=matrix
+    - rvm: ruby-head
+      env: MATRIX_LIBRARY=narray
 env:
   - MATRIX_LIBRARY=gsl
   - MATRIX_LIBRARY=narray
