add SMART_MONEY_WALLET in .env.copy in src/helpers/

--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -12,3 +12,4 @@ MAINNET_ENDPOINT = "https://mainnet.helius-rpc.com/?api-key=<YOUR_HELIUS_API_KEY
 JITO_FEE = "0.0001"
 TAKE_PROFIT = 0.1 # sell when price up 10%
 STOP_LOST = 0.2 # sell when price down 20%
+SMART_MONEY_WALLET = "YOUR_SMART_MONEY_WALLET"
