--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -13,3 +13,4 @@ JITO_FEE = "0.0001"
 TAKE_PROFIT = 0.1 # sell when price up 10%
 STOP_LOST = 0.2 # sell when price down 20%
 SMART_MONEY_WALLET = "YOUR_SMART_MONEY_WALLET"
+BLOXROUTE_AUTH_HEADER = "BLOXROUTE_AUTH_HEADER" # to get, go to https://docs.bloxroute.com/apis/authorization-headers
