--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lightprotocol/compressed-token": "^0.3.4",
     "@lightprotocol/stateless.js": "^0.4.4",
     "@lightprotocol/zk-compression-cli": "^0.4.7",
+    "@mercurial-finance/dynamic-amm-sdk": "^1.0.3",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-candy-machine": "^6.0.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
@@ -26,6 +27,7 @@
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
     "@orca-so/common-sdk": "^0.6.0-alpha.3",
     "@orca-so/whirlpools-sdk": "^0.11.8",
+    "@project-serum/anchor": "^0.26.0",
     "@project-serum/serum": "^0.13.65",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
     "@raydium-io/raydium-sdk-v2": "^0.1.23-alpha",
