--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -10,6 +10,7 @@ MAINNET_ENDPOINT = "https://mainnet.helius-rpc.com/?api-key=<YOUR_HELIUS_API_KEY
 # recommend to use 0.00009
 # specify the fee for jito if you want to land your transaction faster
 JITO_FEE = "0.0001"
+BLOXROUTE_FEE = 0.001
 TAKE_PROFIT = 0.1 # sell when price up 10%
 STOP_LOST = 0.2 # sell when price down 20%
 SMART_MONEY_WALLET = "YOUR_SMART_MONEY_WALLET"
