--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "pino-std-serializers": "^6.2.2",
     "pumpdotfun-sdk": "^1.3.2",
     "random-js": "^2.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.4"
   }
 }
