--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "pino-pretty": "^10.3.1",
     "pino-std-serializers": "^6.2.2",
     "pumpdotfun-sdk": "^1.3.2",
-    "random-js": "^2.1.0"
+    "random-js": "^2.1.0",
+    "rpc-websockets": "7.10.0"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
