Added method to fetch dlmm pool's marketcap, volume, sol in pool

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["./src/**/*.ts", "./src/**/**/*.ts","./src/**/**/**/*.ts","./src/**/**/**/**/*.ts", ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
