--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "pino-std-serializers": "^6.2.2",
     "pumpdotfun-sdk": "^1.3.2",
     "random-js": "^2.1.0",
-    "rpc-websockets": "7.10.0"
+    "rpc-websockets": "7.10.0",
+    "@triton-one/yellowstone-grpc": "^0.4.0",
+    "jito-ts": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
