--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -15,3 +15,21 @@ TAKE_PROFIT = 0.1 # sell when price up 10%
 STOP_LOST = 0.2 # sell when price down 20%
 SMART_MONEY_WALLET = "YOUR_SMART_MONEY_WALLET"
 BLOXROUTE_AUTH_HEADER = "BLOXROUTE_AUTH_HEADER" # to get, go to https://docs.bloxroute.com/apis/authorization-headers
+
+
+# for grpc development
+COMMITMENT_LEVEL=confirmed
+GRPC_XTOKEN=YOUR_GRPC_XTOKEN # the shyft one is great
+LOG_LEVEL=info 
+BLOCK_ENGINE_URL=tokyo.mainnet.block-engine.jito.wtf
+# choose one of this endpoint closest to you
+# amsterdam.mainnet.block-engine.jito.wtf
+# frankfurt.mainnet.block-engine.jito.wtf
+# slc.mainnet.block-engine.jito.wtf
+# tokyo.mainnet.block-engine.jito.wtf
+# ny.mainnet.block-engine.jito.wtf
+
+ # for grpc pump.fun sniper bot
+QUOTE_AMOUNT=0.05 # in SOL
+AUTO_SELL=true # true or false
+AUTO_SELL_TIMEOUT=5 # in seconds
