change readme.md of each grpc projects

--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -22,6 +22,7 @@ COMMITMENT_LEVEL=confirmed
 GRPC_XTOKEN=YOUR_GRPC_XTOKEN # the shyft one is great
 LOG_LEVEL=info 
 BLOCK_ENGINE_URL=tokyo.mainnet.block-engine.jito.wtf
+QUOTE_MINT=WSOL
 # choose one of this endpoint closest to you
 # amsterdam.mainnet.block-engine.jito.wtf
 # frankfurt.mainnet.block-engine.jito.wtf
