--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -19,7 +19,8 @@ BLOXROUTE_AUTH_HEADER = "BLOXROUTE_AUTH_HEADER" # to get, go to https://docs.blo
 
 # for grpc development
 COMMITMENT_LEVEL=confirmed
-GRPC_XTOKEN=YOUR_GRPC_XTOKEN # the shyft one is great
+GRPC_XTOKEN=09644c06-7573-4231-9d99-f9bf54341e7b # just a example,the shyft one is good enough
+GRPC_URL="https://grpc.fra.shyft.to" # just a example, you can use another one or another grpc provider
 LOG_LEVEL=info 
 BLOCK_ENGINE_URL=tokyo.mainnet.block-engine.jito.wtf
 QUOTE_MINT=WSOL
