fix GRPC_XTOKEN issue

--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -19,7 +19,7 @@ BLOXROUTE_AUTH_HEADER = "BLOXROUTE_AUTH_HEADER" # to get, go to https://docs.blo
 
 # for grpc development
 COMMITMENT_LEVEL=confirmed
-GRPC_XTOKEN=09644c06-7573-4231-9d99-f9bf54341e7b # just a example,the shyft one is good enough
+GRPC_XTOKEN="" # you can fill this with your token, or leave it empty depends on the provider
 GRPC_URL="https://grpc.fra.shyft.to" # just a example, you can use another one or another grpc provider
 LOG_LEVEL=info 
 BLOCK_ENGINE_URL=tokyo.mainnet.block-engine.jito.wtf
