write a doc how to use the limit order and tp/sl without any dependencies

--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -11,8 +11,12 @@ MAINNET_ENDPOINT = "https://mainnet.helius-rpc.com/?api-key=<YOUR_HELIUS_API_KEY
 # specify the fee for jito if you want to land your transaction faster
 JITO_FEE = "0.0001"
 BLOXROUTE_FEE = 0.001
+
+# for limit order & tp/sl module
 TAKE_PROFIT = 0.1 # sell when price up 10%
 STOP_LOSS = 0.2 # sell when price down 20%
+ORDER_SIZE = 1 # buy using 1 SOL, if current price hits target price
+BUYIN_PERCENTAGE = 0.05 # buy in when price down 5%
 SMART_MONEY_WALLET = "YOUR_SMART_MONEY_WALLET"
 BLOXROUTE_AUTH_HEADER = "BLOXROUTE_AUTH_HEADER" # to get, go to https://docs.bloxroute.com/apis/authorization-headers
 
