added WS_MAINNET_ENDPOINT in .env.copy and rename it as .env.example

--- a/src/helpers/.env.copy
+++ b/src/helpers/.env.copy
@@ -7,6 +7,8 @@ PRIVATE_KEY = YOUR_PRIVATE_KEY
 # or https://shyft.to/dashboard/overview
 DEVNET_ENDPOINT = "https://devnet-rpc.shyft.to?api_key=<YOUR_SHYFT_API_KEY>"
 MAINNET_ENDPOINT = "https://mainnet.helius-rpc.com/?api-key=<YOUR_HELIUS_API_KEY>"
+
+WS_MAINNET_ENDPOINT = "wss://mainnet.helius-rpc.com/?api-key=<YOUR_HELIUS_API_KEY>"
 # recommend to use 0.00009
 # specify the fee for jito if you want to land your transaction faster
 JITO_FEE = "0.0001"
