--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solana-trading-cli",
   "version": "1.0.0",
-  "description": "Best tool for High-Frequency Trading developers on Solana",
+  "description": "Best development tool for Algo Trading on Solana",
   "main": "help.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
